--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,59 +2,52 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
       lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Shopping List</title>
-		<link rel="stylesheet" th:href="@{/webjars/todomvc-common/base.css}">
-  		<link rel="stylesheet" th:href="@{/webjars/todomvc-app-css/index.css}">
-		<link rel="stylesheet" th:href="@{/styling-edit.css}">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Shopping List</title>
+    <link rel="stylesheet" th:href="@{/webjars/todomvc-common/base.css}">
+    <link rel="stylesheet" th:href="@{/webjars/todomvc-app-css/index.css}">
 
+</head>
+<body>
+<section class="todoapp">
+    <header class="header">
+        <h1>shopping items</h1>
+        <form th:action="@{/}" method="post" th:object="${item}">
+            <input class="new-todo" placeholder="What needs to be added?" autofocus th:field="*{title}">
+        </form>
+    </header>
 
-	</head>
-	<body>
-		<section class="todoapp">
-			<header class="header">
-				<h1>shopping items</h1>
-				<form th:action="@{/}" method="post" th:object="${item}">
-					<input class="new-todo" placeholder="What needs to be added?" autofocus th:field="*{title}">
-				</form>
-			</header>
+    <section class="main" th:if="${totalNumberOfItems > 0}">
+        <input id="toggle-all" class="toggle-all" type="checkbox">
+        <label for="toggle-all">Mark all as complete</label>
+        <ul class="todo-list" th:remove="all-but-first">
+            <li th:insert="fragments :: shoppingItem(${item})" th:each="item : ${shoppingItems}" th:remove="tag">
+            </li>
+            <li class="completed">
+                <div class="view">
+                    <input class="toggle" type="checkbox" checked>
+                    <label>Taste Java</label>
+                    <button class="destroy"></button>
+                </div>
+                <input class="edit" value="Create a Shopping List template">
+            </li>
+            <li>
+                <div class="view">
+                    <input class="toggle" type="checkbox">
+                    <label>Buy a unicorn</label>
+                    <button class="destroy"></button>
+                </div>
+                <input class="edit" value="Rule the web">
+            </li>
+        </ul>
+    </section>
+</section>
+<footer class="info">
+    <p>SinzianaS</p>
 
-			<section class="main" th:if="${totalNumberOfItems > 0}">
-				<input id="toggle-all" class="toggle-all" type="checkbox">
-				<label for="toggle-all">Mark all as complete</label>
-				<ul class="todo-list"th:remove="all-but-first">
-				    <li th:insert="fragments :: shoppingItem(${item})" th:each="item : ${shoppingItems}" th:remove="tag">
-					</li>
-					<li class="completed">
-						<div class="view">
-							<input class="toggle" type="checkbox" checked>
-							<label>Taste Java</label>
-							<button class="destroy"></button>
-						</div>
-						<input class="edit" value="Create a Shopping List template">
-					</li>
-					<li>
-						<div class="view">
-							<input class="toggle" type="checkbox">
-							<label>Buy a unicorn</label>
-							<button class="destroy"></button>
-						</div>
-						<input class="edit" value="Rule the web">
-					</li>
-				</ul>
-			</section>
-
-
-
-				<button class="clear-completed">Clear completed</button>
-			</footer>
-		</section>
-		<footer class="info">
-			<p>SinzianaS</a></p>
-
-		</footer>
-		<script th:src="@{/webjars/todomvc-common/base.js}"></script>
-	</body>
+</footer>
+<script th:src="@{/webjars/todomvc-common/base.js}"></script>
+</body>
 </html>
